# AI-HELP-CENTER

./: .env.example  .gitignore  README.md  Readme.MD  jsconfig.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.sdk.json  tsup.config.js  tsup.config.ts  vercel.json  vitest.config.ts
api/: [[...path]].mjs
app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx
app/dashboard/: page.jsx
app/docs/: page.jsx  page.tsx
components/: ask-form.jsx  ask-form.tsx  auth-buttons.jsx  docs-section.jsx  docs-section.tsx  navbar.jsx  repo-dashboard.jsx  session-provider.jsx
data/: knowledgeBase.json
docs/: aichat-python.md  sdk-publishing.md
lib/: config.js  config.ts  types.js
lib/gemini/: client.js  client.ts  embeddings.js  requestBuilder.js  requestBuilder.ts
lib/github/: app.js  archive.js  files.js  tree.js
lib/indexing/: codeChunkStore.js  codeChunker.js  indexService.js  repositoryStore.js  types.js
lib/prompt/: systemPrompt.js
lib/retrieval/: knowledgeBase.js  knowledgeBase.ts  repoRetriever.js  retriever.js  retriever.ts
lib/sdk/: README.md  client.js  client.ts  index.js  index.ts  package.json
scripts/: prepare-sdk-package.mjs
src/: config.ts  index.ts  server.ts  types.ts
tests/: askRoute.test.js  askRoute.test.ts  datasetHandler.test.js  datasetHandler.test.ts  repoRetriever.test.js  requestBuilder.test.js  requestBuilder.test.ts  retriever.test.js  retriever.test.ts  sdk.test.js  sdk.test.ts  supabaseKnowledgeBase.test.js  supabaseKnowledgeBase.test.ts
(+26 files in other folders)
